pathmind-webapp/frontend/styles/styles.css
/* ... */
/* Customized Scrollbar for WebKit Browsers */
::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
background-color: var(--pm-app-bg-color);
}

::-webkit-scrollbar-thumb {
background-color: var(--pm-grey-color-light);
}

.variable-color-0 {
    color: #000;
    background-color: var(--variable-color-0);
}
.variable-color-1 {
    color: #fff;
    background-color: var(--variable-color-1);
}
.variable-color-2 {
    color: #000;
    background-color: var(--variable-color-2);
}
.variable-color-3 {
    color: #fff;
    background-color: var(--variable-color-3);
}
.variable-color-4 {
    color: #000;
    background-color: var(--variable-color-4);
}
.variable-color-5 {
    color: #000;
    background-color: var(--variable-color-5);
}
.variable-color-6 {
    color: #000;
    background-color: var(--variable-color-6);
}
.variable-color-7 {
    color: #fff;
    background-color: var(--variable-color-7);
}
.variable-color-8 {
    color: #fff;
    background-color: var(--variable-color-8);
}
.variable-color-9 {
    color: #000;
    background-color: var(--variable-color-9);
}

.internal-banner {
    font-size: var(--lumo-font-size-s);
    color: var(--lumo-body-text-color);
    background-color: var(--pm-gold-color);
}

[icon="vaadin:star"] {
    color: var(--pm-gold-color);
}

.project-view [icon="vaadin:star"] {
    --iron-icon-width: var(--lumo-font-size-s);
    --iron-icon-height: var(--lumo-font-size-s);
    vertical-align: text-top;
}

.project-view [icon="vaadin:close"],
.project-view [icon="vaadin:check"] {
    --iron-icon-width: var(--lumo-font-size-m);
    --iron-icon-height: var(--lumo-font-size-m);
    vertical-align: text-top;
}

#nav-main-links,
#nav-main-links a,
.nav-account-links a {
    align-items: stretch;
    color: var(--lumo-body-text-color);
}

#nav-main-links a:hover {
    color: var(--pm-primary-color);
    text-decoration: none;
}

#nav-main-links .navbar-logo + a:not(.navbar-logo) {
    margin-left: var(--lumo-space-xxl);
}

#nav-main-links a:not(.navbar-logo) {
    position: relative;
    display: flex;
    align-items: center;
    font-size: var(--lumo-font-size-s);
    font-weight: 600;
    font-family: var(--lumo-font-family-header);
    line-height: 1;
    padding: var(--lumo-space-m) 0;
    margin-left: var(--lumo-space-l);
    overflow: hidden;
}

#nav-main-links a:not(.navbar-logo)::after {
    content: '';
    display: block;
    position: absolute;
    width: 0;
    height: 3px;
    left: 50%;
    bottom: -1px;
    background-color: var(--lumo-primary-color);
    transform: translateX(-50%);
    transition: all 0.2s;
}

#nav-main-links a:not(.navbar-logo)[highlight] {
    color: var(--lumo-primary-color);
}

#nav-main-links a:not(.navbar-logo):hover::after,
#nav-main-links a:not(.navbar-logo)[highlight]::after {
    width: 100%;
}

.nav-account-links {
    align-items: center;
    margin-left: auto;
}

.navbar-logo {
    display: flex;
    align-self: center;
    width: 144px;
    height: 31px;
}

.navbar-logo img {
    display: block;
    width: 100%;
}

.panel-title-label {
    box-sizing: border-box;
    width: 100%;
    font-size: var(--lumo-font-size-s);
    font-weight: normal;
    color: var(--lumo-secondary-text-color);
    line-height: 1;
    background: var(--pm-app-bg-color);
    padding: var(--lumo-space-xs);
    border-bottom: 1px solid var(--pm-grey-color-lightest);
}
.light-text-label {
    font-size: var(--lumo-font-size-m);
    color: var(--pm-orange-color);
}

.bold-label {
    font-weight: bold;
}
.no-top-margin-label {
    margin-top: 0;
}

.section-title-label,
.section-title-label-regular-font-weight {
    font-size: var(--lumo-font-size-xl);
    font-family: var(--lumo-font-family-header);
    color: var(--pm-text-color);
}

.section-title-label {
    font-weight: bold;
}

.section-subtitle-label {
    font-family: var(--lumo-font-family-header);
    color: var(--pm-text-color);
}

.truncated-label {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}

.highlight-label {
    background-color: var(--pm-yellow-color);
}

.hint-label,
.fade-out-hint-label {
    font-size: var(--lumo-font-size-s);
    color: var(--pm-primary-color);
}

.fade-out-hint-label {
    opacity: 0;
    transition: opacity 0.5s;
}

.fade-out-hint-label.fade-in {
    display: block !important;
    opacity: 1;
}

.closeable-notification-text-label {
    display: inline-block;
    max-width: 350px;
    padding-right: 15px;
}

.default-view {
    height: 100%;
    border-top: 1px solid var(--pm-grey-color-lightest);
}

.view-section {
    width: 100%;
    background: white;
    border-radius: var(--lumo-border-radius);
    overflow: hidden;
    padding: var(--lumo-space-xl);
    box-sizing: border-box;
    min-width: 520px;
    flex: 1;
}

.page-content-header {
    margin-bottom: var(--lumo-space-m);
}

.page-content-header > vaadin-button {
    margin: 0 0 0 var(--lumo-space-xxl);
}

.demo-view-content + vaadin-button {
    position: absolute;
    top: var(--lumo-space-m);
    right: var(--lumo-space-m);
}

vaadin-dialog-overlay .demo-view-content {
    padding: var(--lumo-space-xs);
}

.projects-view vaadin-button[theme~="primary"] {
    width: 15.8rem;
}

.projects-view .page-content-header {
    margin-bottom: 0;
}

.projects-view .content-wrapper {
    flex: 1 0 auto;
}

.projects-view .view-section,
.project-view .view-section,
.project-view .page-content {
    box-sizing: border-box;
    flex: 1 1 auto;
}

.projects-view .page-content {
    box-sizing: border-box;
    flex: 1 0 auto;
}

.projects-view .view-section {
    padding: var(--lumo-space-m) var(--lumo-space-l) 0;
    border-radius: 0;
}

.projects-view .section-title-label,
.project-view .section-title-label {
    line-height: 1.1;
    white-space: pre-wrap;
    word-break: break-word;
}

.project-view .section-subtitle-label,
.search-results-view .section-subtitle-label {
    color: var(--lumo-secondary-text-color);
}
/* ... */

